--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
     </div>
     <!-- START Bootstrap-Cookie-Alert -->
     <div class="alert text-center cookiealert" role="alert">
-        <b>Używamy cookies to poprawienia komfortu użytkowania strony.
+        <b>Używamy cookies w celu poprawienia komfortu użytkowania tej strony.
 
         <button type="button" class="btn btn-primary btn-sm acceptcookies" aria-label="Close">
             Zgadzam się
