--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
     <link rel="icon"
       type="image/png"
       href="img/edlogo.PNG">
-    <title>GameStats</title>
+    <title>GameStats - automatyczne statystyki sportowe.</title>
+    <meta name="description" content="Automatyczne statystki dla piłki nożnej. Zamień video na zrozumiałe dane. Użycie dronów w piłce nożnej."/>
+    <meta name="keywords" content="Piłka nożna statystki, drony statystyki, trening dronem, piłka nożna dron, oprogramowanie piłka nożna,
+        aplikacja piłka nożna">
+    <meta name="author" content="Filip Geppert">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css">
     <!-- Bootstrap core CSS -->
