Modify index to point to blog

--- a/index.html
+++ b/index.html
@@ -76,14 +76,21 @@
 
             <!-- Right -->
             <ul class="navbar-nav nav-flex-icons">
-                <li class="nav-item">
+                <li class="nav-item m-1">
                     <a href="#contact"
                        class="nav-link border border-light rounded"
-                       >Skontaktuj się z nami!
+                    ><strong>Skontaktuj się z nami!</strong>
                     </a>
                 </li>
             </ul>
-
+            <ul class="navbar-nav nav-flex-icons">
+                <li class="nav-item m-1">
+                    <a href="/blog.html"
+                       class="nav-link border border-light rounded"
+                    >Blog: zastosowanie video z drona w piłce nożnej
+                    </a>
+                </li>
+            </ul>
         </div>
 
     </div>
