--- a/blog.html
+++ b/blog.html
@@ -21,8 +21,8 @@
     <link rel="icon"
       type="image/png"
       href="img/edlogo.PNG">
-    <title>GameStats - automatyczne statystyki sportowe.</title>
-    <meta name="description" content="Automatyczne statystki dla piłki nożnej. Zamień video na zrozumiałe dane. Użycie dronów w piłce nożnej."/>
+    <title>GameStats - użycie drona w treningu piłki nożnej.</title>
+    <meta name="description" content="Zastosowanie drona w piłce nożnej. Zastosowanie video z drona w treningu drużyny."/>
     <meta name="keywords" content="Piłka nożna statystki, drony statystyki, trening dronem, piłka nożna dron, oprogramowanie piłka nożna,
         aplikacja piłka nożna">
     <meta name="author" content="Filip Geppert">
@@ -152,7 +152,7 @@
                       ustawienie oraz jak często może je zmienić w ciągu spotkania.</p>
                   <hr>
                   <p class="h5 my-4">Chcesz wiedzieć więcej o GameStats? </p>
-                  <p class="text-justify">Kliknij <a href="index.html/#about">Tutaj</a>, gdzie dokładnie opisujemy jak
+                  <p class="text-justify">Kliknij <a href="index.html">Tutaj</a>, gdzie dokładnie opisujemy jak
                       działa oprogramowanie do automatycznego przetwarzania obrazu z treningu na przydatne statystyki.
                   </p>
               </div>
