--- a/index.html
+++ b/index.html
@@ -73,24 +73,21 @@
 
         <!-- Links -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="#contact">Kontakt</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/blog.html">Blog: zastosowanie video z drona w piłce nożnej</a>
+                </li>
 
-            <!-- Right -->
-            <ul class="navbar-nav nav-flex-icons">
-                <li class="nav-item m-1">
-                    <a href="#contact"
-                       class="nav-link border border-light rounded"
-                    ><strong>Skontaktuj się z nami!</strong>
-                    </a>
+            </ul>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="https://gamestats-app.herokuapp.com/login">Zaloguj się</a>
                 </li>
             </ul>
-            <ul class="navbar-nav nav-flex-icons">
-                <li class="nav-item m-1">
-                    <a href="/blog.html"
-                       class="nav-link border border-light rounded"
-                    >Blog: zastosowanie video z drona w piłce nożnej
-                    </a>
-                </li>
-            </ul>
+
         </div>
 
     </div>
